# post-training-roadmap

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: base.yaml
configs/dpo/: qwen05b_dpo.yaml
configs/rl/: qwen05b_grpo.yaml
configs/sft/: qwen05b_structured.yaml
evals/: README.md
notes/: HOW_TO_USE_NOTES.md
reports/: baseline_samples.jsonl  project1_sft.md  project2_dpo.md  project3_rl.md
scripts/: eval_model.py  prepare_pref_data.py  prepare_rl_data.py  prepare_sft_data.py  sample_generations.py  setup_env.sh  train_dpo.py  train_grpo.py  train_sft.py
src/common/: config.py  generation.py  io.py  logging.py  prompts.py  tokenization.py  utils.py
src/evals/: exact_match.py  qualitative_dump.py
src/rl/: verifier.py
