[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "post-training-roadmap"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "trl",
    "peft",
    "accelerate",
    "wandb",
    "evaluate",
    "scikit-learn",
    "pandas",
    "jupyter",
    "pyyaml",
    "bitsandbytes",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
